--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,11 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@400;500;600&display=swap");
 @import url(./normalize.css);
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
-
-
-
-
-
-
-
-
-
+@import url(./header.css);
+@import url(./about.css);
