--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -1,54 +1,110 @@
-*{
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-}
-:root{
-    --text-main-blue:#5671A6;
-    --text-dark-gray:#383838;
-    --text-light-gray:#616161;
-}
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Caveat', cursive;
-    font-style: normal;
-    line-height: normal;
-    font-weight: 600;
+* {
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
 }
 
+:root {
+  --text-main-blue: #5671a6;
+  --text-dark-grey: #383838;
+  --text-light-grey: #616161;
+  --text-white: #fff;
+
+  --button-blue: #5671a6;
+  --button-light: #759dee;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Tektur", sans-serif;
+  font-style: normal;
+  line-height: normal;
+  font-weight: 600;
+}
+h1,
+h2,
+h3 {
+  color: var(--text-main-blue);
+}
 h1 {
-    color:var(--text-main-blue);
-    font-size: 36px;
-   
+  font-size: 36px;
 }
 h2 {
-    color:var(--text-main-blue);
-    font-size: 32px;
-   
+  font-size: 32px;
 }
 h3 {
-    color:var(--text-main-blue);
-    font-size: 16px;
-   
+  font-size: 16px;
 }
-h4{
-    color:var(--text-dark-gray);
-    font-size: 16px;
-   
+h4 {
+  color: var(--text-dark-grey);
+  font-size: 16px;
 }
-h5{
-    color:var(--text-dark-gray);
-    font-size: 14px;  
-     
+h5 {
+  color: var(--text-dark-grey);
+  font-size: 14px;
 }
-h6{
-    color:var(--text-light-gray);
-    font-size: 12px;
-    font-weight: 400;
+h6 {
+  color: var(--text-light-grey);
+  font-size: 12px;
+  font-weight: 400;
 }
-button{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+p {
+  color: var(--text-light-grey);
+  text-align: center;
+  font-family: "Tektur", sans-serif;
+  font-size: 16px;
+
+  font-weight: 500;
+}
+a {
+  text-decoration: none;
+}
+button {
+  padding: 10px 15px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 50px;
+  border: 2px solid var(--button-blue);
+  cursor: pointer;
+  transition: 0.3s;
 }
 
+.btn-demo {
+  /* Вид кнопки */
+  background: none;
+  color: var(--text-main-blue);
+  /* текст */
+  text-transform: uppercase;
+  /* Отступы внутри */
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.btn-demo:hover {
+  background: var(--button-blue);
+  color: var(--text-white);
+}
+button:active {
+  transform: scale(90%);
+}
+
+.btn-contact {
+  color: var(--text-white);
+  background-color: var(--button-blue);
+  padding-left: 35px;
+  padding-right: 35px;
+}
+.btn-contact:hover {
+  background: linear-gradient(105deg, #5671a6 11.88%, #b3cbd9 80.84%);
+}
+
+body {
+  background-image: url("../images/background-light.png");
+  /* убрать повторения */
+  background-repeat: no-repeat;
+  /* масштабирование картинки */
+  background-size: cover;
+}
